--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,8 @@ dist.jar=${dist.dir}/TurnStile.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jssc-2.8.0.jar=C:\\Users\\Guinness\\Documents\\apps\\rxtx-2.0-7pre1-i386-pc-mingw32\\jssc-2.8.0.jar
-file.reference.RXTXcomm.jar=C:\\Users\\Guinness\\Documents\\apps\\rxtx-2.0-7pre1-i386-pc-mingw32\\RXTXcomm.jar
+file.reference.jssc-2.8.0.jar=jssc-2.8.0.jar
+file.reference.RXTXcomm.jar=RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
